--- a/src/OntoGen/evaluate_answers.ipynb
+++ b/src/OntoGen/evaluate_answers.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json \n",
+    "import json\n",
     "\n",
     "path_kg = \"ElementKG/answers/answers_GraphRAG_KG.json\"\n",
     "path_kg_onto = \"ElementKG/answers/answers_GraphRAG_KG_Ontology.json\"\n",
@@ -23,12 +23,14 @@
     "TEMPERATURE = 0\n",
     "\n",
     "criteria = [\n",
-    "    'Comprehensiveness: How much detail does the answer provide to cover all aspects and details of the question?',\n",
-    "    'Diversity: How varied and rich is the answer in providing different perspectives and insights on the question?',\n",
-    "    'Empowerment: How well does the answer help the reader understand and make informed judgements about the topic?',\n",
-    "    'Directness: How specifically and clearly does the answer address the question?'\n",
+    "    \"Comprehensiveness: How much detail does the answer provide to cover all aspects and details of the question?\",\n",
+    "    \"Diversity: How varied and rich is the answer in providing different perspectives and insights on the question?\",\n",
+    "    \"Empowerment: How well does the answer help the reader understand and make informed judgements about the topic?\",\n",
+    "    \"Directness: How specifically and clearly does the answer address the question?\",\n",
     "]\n",
-    "CRITERIA = 0 # 0: Comprehensiveness, 1: Diversity, 2: Empowerment, 3: Directness"
+    "CRITERIA = (\n",
+    "    0  # 0: Comprehensiveness, 1: Diversity, 2: Empowerment, 3: Directness\n",
+    ")"
    ]
   },
   {
@@ -2423,29 +2425,29 @@
     "\n",
     "for i in range(len(data_kg)):\n",
     "\n",
-    "    print('='*50, \" QUESTION \", i, '='*50)\n",
+    "    print(\"=\" * 50, \" QUESTION \", i, \"=\" * 50)\n",
     "    print()\n",
-    "    res = data_kg[i][0].split('\\n')\n",
+    "    res = data_kg[i][0].split(\"\\n\")\n",
     "    res = [\"\\t\" + x for x in res if x]\n",
-    "    res = '\\n'.join(res)\n",
+    "    res = \"\\n\".join(res)\n",
     "    print(res)\n",
     "    print()\n",
-    "    print('='*50, \" ANSWER 1 (GRAPHRAG KG)\", '='*50)\n",
+    "    print(\"=\" * 50, \" ANSWER 1 (GRAPHRAG KG)\", \"=\" * 50)\n",
     "    print()\n",
-    "    res = data_kg[i][1].split('\\n')\n",
+    "    res = data_kg[i][1].split(\"\\n\")\n",
     "    res = [\"\\t\" + x for x in res if x]\n",
-    "    res = '\\n'.join(res)\n",
+    "    res = \"\\n\".join(res)\n",
     "    print(res)\n",
     "    print()\n",
-    "    print('='*50, \" ANSWER 2 (GRAPHRAG KG + ONTOLOGY)\", '='*50)\n",
+    "    print(\"=\" * 50, \" ANSWER 2 (GRAPHRAG KG + ONTOLOGY)\", \"=\" * 50)\n",
     "    print()\n",
-    "    res = data_onto[i][1].split('\\n')\n",
+    "    res = data_onto[i][1].split(\"\\n\")\n",
     "    res = [\"\\t\" + x for x in res if x]\n",
-    "    res = '\\n'.join(res)\n",
+    "    res = \"\\n\".join(res)\n",
     "    print(res)\n",
     "    print()\n",
-    "    print('*' * 140)\n",
-    "    print('*' * 140)\n",
+    "    print(\"*\" * 140)\n",
+    "    print(\"*\" * 140)\n",
     "    print()"
    ]
   },
@@ -2455,11 +2457,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import anthropic, os\n",
+    "import os\n",
+    "\n",
+    "import anthropic\n",
     "\n",
     "client = anthropic.Anthropic(\n",
     "    api_key=ANTHROPIC_API_KEY,\n",
     ")\n",
+    "\n",
     "\n",
     "def query_anthropic(client, question):\n",
     "    message = client.messages.create(\n",
@@ -2467,18 +2472,10 @@
     "        max_tokens=1000,\n",
     "        temperature=TEMPERATURE,\n",
     "        messages=[\n",
-    "            {\n",
-    "                \"role\": \"user\",\n",
-    "                \"content\": [\n",
-    "                    {\n",
-    "                        \"type\": \"text\",\n",
-    "                        \"text\": question\n",
-    "                    }\n",
-    "                ]\n",
-    "            }\n",
-    "        ]\n",
+    "            {\"role\": \"user\", \"content\": [{\"type\": \"text\", \"text\": question}]}\n",
+    "        ],\n",
     "    )\n",
-    "    return message.content[0].text  "
+    "    return message.content[0].text"
    ]
   },
   {
@@ -2514,19 +2511,25 @@
     "    answer2 = data_onto[i][1]\n",
     "\n",
     "    formated = prompt.format(\n",
-    "        CRITERIA=criteria[CRITERIA], \n",
-    "        QUESTION=question, \n",
-    "        ANSWER1=answer1, \n",
-    "        ANSWER2=answer2\n",
+    "        CRITERIA=criteria[CRITERIA],\n",
+    "        QUESTION=question,\n",
+    "        ANSWER1=answer1,\n",
+    "        ANSWER2=answer2,\n",
     "    )\n",
     "    ans = query_anthropic(client, formated)\n",
-    "    if \"Winner=ANSWER2\".lower() in ans.lower() and \"Winner=ANSWER1\".lower() not in ans.lower():\n",
+    "    if (\n",
+    "        \"Winner=ANSWER2\".lower() in ans.lower()\n",
+    "        and \"Winner=ANSWER1\".lower() not in ans.lower()\n",
+    "    ):\n",
     "        answers.append(2)\n",
-    "    elif \"Winner=ANSWER1\".lower() in ans.lower() and \"Winner=ANSWER2\".lower() not in ans.lower():\n",
+    "    elif (\n",
+    "        \"Winner=ANSWER1\".lower() in ans.lower()\n",
+    "        and \"Winner=ANSWER2\".lower() not in ans.lower()\n",
+    "    ):\n",
     "        answers.append(1)\n",
     "    else:\n",
     "        answers.append(0)\n",
-    "        \n",
+    "\n",
     "winner_kg = [a == 1 for a in answers].count(True)\n",
     "winner_onto = [a == 2 for a in answers].count(True)\n",
     "no_winner = [a == 0 for a in answers].count(True)\n",
