--- a/src/OntoGen/taxonomy_metrics.ipynb
+++ b/src/OntoGen/taxonomy_metrics.ipynb
@@ -6,10 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tree import Tree, lemma\n",
     "import pickle\n",
     "\n",
-    "PATH = 'taxonomy/tree_0.pkl'"
+    "from tree import Tree, lemma\n",
+    "\n",
+    "PATH = \"taxonomy/tree_0.pkl\""
    ]
   },
   {
@@ -30,11 +31,11 @@
     "\n",
     "# create lower case words too\n",
     "def reduced(word):\n",
-    "    res = lemma(word.lower().replace(' ', ''))\n",
+    "    res = lemma(word.lower().replace(\" \", \"\"))\n",
     "    if type(res) == tuple:\n",
-    "        joined = ''.join(list(res))\n",
+    "        joined = \"\".join(list(res))\n",
     "    if type(res) == list:\n",
-    "        joined = ''.join(res)\n",
+    "        joined = \"\".join(res)\n",
     "    return joined\n",
     "\n",
     "\n",
@@ -123,7 +124,7 @@
     "    print(\"Average steps to leaf: \", avg_steps_to_leaf)\n",
     "    print(\"Number of nodes: \", num_nodes)\n",
     "    print(\"Number of leafs: \", num_leafs)\n",
-    "    print(\"Number of edges: \", num_edges)\n"
+    "    print(\"Number of edges: \", num_edges)"
    ]
   },
   {
@@ -132,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH, 'rb') as f:\n",
+    "with open(PATH, \"rb\") as f:\n",
     "    reconstructed_tree = pickle.load(f)\n",
     "\n",
     "wordmap = {}\n",
@@ -167,6 +168,7 @@
     "    visited.remove(tree)\n",
     "    for syn in tree.synonyms:\n",
     "        wordmap[syn] = tree\n",
+    "\n",
     "\n",
     "# tree should have loops, but it might be necessary to remove them in case there are some\n",
     "visited = set()\n",
