--- a/src/OntoGen/termo/example.ipynb
+++ b/src/OntoGen/termo/example.ipynb
@@ -13,8 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from termo import Termo\n",
-    "import pandas as pd  # for visualization purposes"
+    "import pandas as pd  # for visualization purposes\n",
+    "from termo import Termo"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = '''\n",
+    "text = \"\"\"\n",
     "The Calvin cycle, light-independent reactions, bio synthetic phase, dark reactions, or photosynthetic carbon reduction (PCR) cycle of photosynthesis \n",
     "is a series of chemical reactions that convert carbon dioxide and hydrogen-carrier compounds into glucose. The Calvin cycle is present in all \n",
     "photosynthetic eukaryotes and also many photosynthetic bacteria. In plants, these reactions occur in the stroma, the fluid-filled region of a \n",
@@ -32,12 +32,12 @@
     "produce sugars for the plant to use. These substrates are used in a series of reduction-oxidation (redox) reactions to produce sugars in a step-wise \n",
     "process; there is no direct reaction that converts several molecules of CO2 to a sugar. There are three phases to the light-independent reactions, \n",
     "collectively called the Calvin cycle: carboxylation, reduction reactions, and ribulose 1,5-bisphosphate (RuBP) regeneration.\n",
-    "'''\n",
+    "\"\"\"\n",
     "\n",
-    "model = 'llama3.1:70b'\n",
+    "model = \"llama3.1:70b\"\n",
     "model_params = {\n",
-    "    'temperature': 0.0,\n",
-    "    'num_ctx': 512,\n",
+    "    \"temperature\": 0.0,\n",
+    "    \"num_ctx\": 512,\n",
     "}"
    ]
   },
@@ -387,9 +387,11 @@
     }
    ],
    "source": [
-    "termo = Termo(text, backend='ollama')\n",
+    "termo = Termo(text, backend=\"ollama\")\n",
     "terms = termo.extract_terms(model=model, options=model_params)\n",
-    "df = pd.DataFrame(terms, columns=['Term', 'Start Index', 'End Index', 'Sentence Index'])\n",
+    "df = pd.DataFrame(\n",
+    "    terms, columns=[\"Term\", \"Start Index\", \"End Index\", \"Sentence Index\"]\n",
+    ")\n",
     "df"
    ]
   },
@@ -467,10 +469,12 @@
    "source": [
     "# we need to set the terms to the termo object\n",
     "# so the acronym extracted can be matched with the terms\n",
-    "termo['terms'] = terms\n",
+    "termo[\"terms\"] = terms\n",
     "\n",
-    "acronyms = termo.extract_acronyms(model=model, max_length_split=2000, options=model_params)\n",
-    "df = pd.DataFrame(list(acronyms.items()), columns=['Acronym', 'Term'])\n",
+    "acronyms = termo.extract_acronyms(\n",
+    "    model=model, max_length_split=2000, options=model_params\n",
+    ")\n",
+    "df = pd.DataFrame(list(acronyms.items()), columns=[\"Acronym\", \"Term\"])\n",
     "df"
    ]
   },
@@ -657,10 +661,12 @@
    "source": [
     "# we need to set the terms to the termo object\n",
     "# so that a definition is extracted for each term\n",
-    "termo['terms'] = terms\n",
+    "termo[\"terms\"] = terms\n",
     "\n",
-    "definitions = termo.extract_definitions(model=model, max_length_split=2000, options=model_params)\n",
-    "df = pd.DataFrame(list(definitions.items()), columns=['Term', 'Definition'])\n",
+    "definitions = termo.extract_definitions(\n",
+    "    model=model, max_length_split=2000, options=model_params\n",
+    ")\n",
+    "df = pd.DataFrame(list(definitions.items()), columns=[\"Term\", \"Definition\"])\n",
     "df"
    ]
   },
@@ -849,10 +855,14 @@
    "source": [
     "# we need to set the terms to the termo object\n",
     "# so that relationships are extracted between the given terms\n",
-    "termo['terms'] = terms\n",
+    "termo[\"terms\"] = terms\n",
     "\n",
-    "relationships = termo.extract_relationships(model=model, max_length_split=2000, options=model_params)\n",
-    "df = pd.DataFrame(relationships, columns=['Term1 ->', 'Relationship ->', 'Term2'])\n",
+    "relationships = termo.extract_relationships(\n",
+    "    model=model, max_length_split=2000, options=model_params\n",
+    ")\n",
+    "df = pd.DataFrame(\n",
+    "    relationships, columns=[\"Term1 ->\", \"Relationship ->\", \"Term2\"]\n",
+    ")\n",
     "df"
    ]
   }
