--- a/src/OntoGen/visualize_taxonomy.ipynb
+++ b/src/OntoGen/visualize_taxonomy.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import pickle\n",
     "\n",
-    "TAXONOMY_TREE_PATH = 'taxonomy/tree_4.pkl'"
+    "TAXONOMY_TREE_PATH = \"taxonomy/tree_4.pkl\""
    ]
   },
   {
@@ -18,16 +18,17 @@
    "outputs": [],
    "source": [
     "# http://python-future.org/compatible_idioms.html#stringio\n",
-    "#from StringIO import StringIO\n",
+    "# from StringIO import StringIO\n",
     "from io import BytesIO\n",
-    "from IPython.display import Image, display\n",
+    "\n",
     "import pygraphviz\n",
+    "from IPython.display import Image, display\n",
     "\n",
     "\n",
     "def display_graph(G):\n",
     "    # https://github.com/chebee7i/nxpd/blob/master/nxpd/ipythonsupport.py\n",
     "    imgbuf = BytesIO()\n",
-    "    G.draw(imgbuf, format='png', prog='dot')\n",
+    "    G.draw(imgbuf, format=\"png\", prog=\"dot\")\n",
     "    img = Image(imgbuf.getvalue())\n",
     "    display(img)\n",
     "\n",
@@ -40,10 +41,17 @@
     "    G.graph_attr[\"rankdir\"] = \"LR\"\n",
     "    G.graph_attr[\"splines\"] = \"ortho\"\n",
     "    # http://www.graphviz.org/content/attrs#dordering\n",
-    "        \n",
+    "\n",
     "    # iterate tree and add edges\n",
     "    def iterate_create_graph(G, node):\n",
-    "        G.add_node(node.value, shape='box', label=node.synonyms[0], fillcolor='#E01A4F', style='filled', fontcolor = 'white')\n",
+    "        G.add_node(\n",
+    "            node.value,\n",
+    "            shape=\"box\",\n",
+    "            label=node.synonyms[0],\n",
+    "            fillcolor=\"#E01A4F\",\n",
+    "            style=\"filled\",\n",
+    "            fontcolor=\"white\",\n",
+    "        )\n",
     "        for child in node.children:\n",
     "            iterate_create_graph(G, child)\n",
     "            G.add_edge(node.value, child.value)\n",
@@ -51,10 +59,9 @@
     "    iterate_create_graph(G, tree)\n",
     "\n",
     "    G.graph_attr[\"ordering\"] = \"out\"\n",
-    "    G.layout(prog='dot')\n",
+    "    G.layout(prog=\"dot\")\n",
     "\n",
-    "    return G\n",
-    "        "
+    "    return G"
    ]
   },
   {
@@ -74,7 +81,7 @@
     }
    ],
    "source": [
-    "with open(TAXONOMY_TREE_PATH, 'rb') as f:\n",
+    "with open(TAXONOMY_TREE_PATH, \"rb\") as f:\n",
     "    tree = pickle.load(f)\n",
     "G = get_graphviz_agraph(tree)\n",
     "display_graph(G)"
